@startuml
' BombSupply Observer Pattern

interface CanBeBlownUp {
  + void beblownup()
}

class BombSupply {
  - registeredEnemies: ConcurrentLinkedQueue<CanBeBlownUp>
  + void addenemy(CanBeBlownUp enemy)
  + int active()
}

class EliteEnemy {
  + void beblownup()
}

class ElitePlusEnemy {
  + void beblownup()
}

class MobEnemy {
  + void beblownup()
}

BombSupply o--> "observers" CanBeBlownUp
EliteEnemy ..|> CanBeBlownUp
ElitePlusEnemy ..|> CanBeBlownUp
MobEnemy ..|> CanBeBlownUp

@enduml
